--- a/templates/default/src/main/resources/application-default.yml
+++ b/templates/default/src/main/resources/application-default.yml
@@ -15,6 +15,8 @@
 spring:
   profiles:
     active: h2                              # profiles to activated, separated by comma (,)
+    include:
+    - h2
   jpa:
     database: H2
     show-sql: true
